--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -70,3 +70,12 @@
 a:hover{
   color: #484848 !important;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.27s;
+}
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+}
